fix scroll behavior unexpected when bar-header content overflow

--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ textarea {
 }
 
 .container {
-  min-height: 100vh;
-  min-width: 100vw;
+  min-height: 100%;
+  min-width: 100%;
   /*  */
   width: fit-content;
   height: fit-content;
@@ -90,7 +90,7 @@ textarea {
 }
 
 .bars-container {
-  min-height: 100vh;
+  min-height: 97vh;
   height: fit-content;
   width: 100%;
   background-color: rgb(106, 140, 244);
@@ -98,7 +98,7 @@ textarea {
   justify-content: center;
   align-items: flex-end;
   flex-wrap: nowrap;
-  padding: 11vh 1% 30vh 1%;
+  padding: 10vh 1% 30vh 1%;
   overflow: auto;
 }
 
